<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorActivityBackground">

    <ImageView
        android:id="@+id/image_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/witcher_result"
        android:contentDescription="@string/image_description_resultActivity"/>

    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/resultActivity_padding"
        android:paddingTop="@dimen/resultActivity_padding"
        android:text="@string/text_example"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/textSize_30"
        android:textStyle="bold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/gradient_box"
        android:onClick="resetQuiz"
        android:text="@string/once_again" />
</RelativeLayout>