<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorActivityBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.quizwitcher.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/quiz_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mainActivity_text_view_margin"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/mainActivity_tittle_size"
            android:textStyle="bold"
            android:fontFamily="@string/sans_serif_condensed"/>

        <ImageView
            android:id="@+id/quiz_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/quiz_tittle"
            android:src="@drawable/logo_witcher"
            tools:ignore="ContentDescription" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quiz_logo"
            android:layout_centerHorizontal="true"
            android:text="@string/start"
            android:onClick="openQuizQuestion"
            android:background="@drawable/gradient_box"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_size_36"
            android:fontFamily="@string/sans_serif_condensed"/>

    </RelativeLayout>
</ScrollView>
